<resources>
    <string name="app_name">Cocktails</string>
    <string name="cocktail_photo">cocktail_photo</string>
    <string name="cocktail_welcome">Cocktail</string>
    <string name="text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="advance">advance</string>
    <string name="find_by_name">find cocktail</string>
    <string name="show_all">Show all</string>
    <string name="search">search</string>
    <string name="enter_your_choice">enter your choice</string>
    <string name="glass">glass:</string>
    <string name="alcoholic">alcoholic:</string>
    <string name="style">style:</string>
    <string name="ingredients">ingredients:</string>
    <string name="instructions">instructions:</string>
    <string name="add_to_favourites">add to favourites</string>
    <string name="right_arrow">right arrow</string>
    <string name="error_message">An error occurred while loading data</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="remove_favourite">Remove favourite</string>
    <string name="favourite">Favourite</string>
    <string name="your_favourite_list_is_empty">Your favourite list is empty</string>
    <string name="my_email">korustlt@gmail.com</string>
    <string name="fragment_main">Main</string>
    <string name="fragment_choose_search">choose search</string>
    <string name="fragment_search_by_name">search by name</string>
    <string name="fragment_result_list">result list</string>
    <string name="fragment_detail_info">detail info</string>
    <string name="fragment_favourite_list">favourite list</string>
    <string name="home">Home</string>
    <string name="measures">measures:</string>
    <string name="last_date_modified">last date modified:</string>
</resources>
