<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/head_drawer_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="40dp"
        app:cardElevation="3dp"
        android:layout_width="80dp"
        android:layout_height="80dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cocktail_photo"
            android:src="@mipmap/ic_cocktail_logo"/>

    </androidx.cardview.widget.CardView>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_18"
        android:fontFamily="@font/montserrat"
        android:paddingTop="5dp"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/textView"
        android:textSize="@dimen/text_size_18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:fontFamily="@font/roboto"
        android:text="@string/my_email" />

</LinearLayout>