<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.bulyginkonstantin.cocktailbase.view.MainFragment"
        android:label="@string/fragment_main"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/actionToChooseSearchFragment"
            app:destination="@id/chooseSearchFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@id/chooseSearchFragment"
        android:name="com.bulyginkonstantin.cocktailbase.view.ChooseSearchFragment"
        android:label="@string/fragment_choose_search"
        tools:layout="@layout/fragment_choose_search">
        <action
            android:id="@+id/actionToSearchByNameFragment"
            app:destination="@id/searchByNameFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/actionToResulAlltListFragment"
            app:destination="@id/resultAllListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/actionFromChooseSearchFragmentToFavouriteListFragment"
            app:destination="@id/favouriteListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/searchByNameFragment"
        android:name="com.bulyginkonstantin.cocktailbase.view.SearchByNameFragment"
        android:label="@string/fragment_search_by_name"
        tools:layout="@layout/fragment_search_by_name">
        <action
            android:id="@+id/actionToResulAlltListFragment"
            app:destination="@id/resultAllListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@id/resultAllListFragment"
        android:name="com.bulyginkonstantin.cocktailbase.view.ResultAllListFragment"
        android:label="@string/fragment_result_list"
        tools:layout="@layout/fragment_result_list">
        <action
            android:id="@+id/actionToDetailInfoFragment"
            app:destination="@id/detailInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/detailInfoFragment"
        android:name="com.bulyginkonstantin.cocktailbase.view.DetailInfoFragment"
        android:label="@string/fragment_detail_info"
        tools:layout="@layout/fragment_detail_info">
        <action
            android:id="@+id/actionToFavouriteListFragment"
            app:destination="@id/favouriteListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="cocktailId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@id/favouriteListFragment"
        android:name="com.bulyginkonstantin.cocktailbase.view.FavouriteListFragment"
        android:label="@string/fragment_favourite_list"
        tools:layout="@layout/fragment_favourite_list">
        <action
            android:id="@+id/action_favouriteListFragment_to_chooseSearchFragment"
            app:destination="@id/chooseSearchFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/actionFromFavouriteListFragmentToDetailInfoFragment"
            app:destination="@id/detailInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>


</navigation>