<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        tools:context=".view.ChooseSearchFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewSearch"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/cocktail_photo"
                android:src="@drawable/three_bottles_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.486"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/cocktail_welcome"
                android:textColor="#011F3F"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewSearch" />

            <Button
                android:id="@+id/buttonFindByName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/oval_button"
                android:elevation="3dp"
                android:fontFamily="@font/roboto"
                android:text="@string/find_by_name"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_24"
                app:layout_constraintBottom_toTopOf="@+id/buttonShowAll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonShowAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/oval_button"
                android:elevation="3dp"
                android:fontFamily="@font/roboto"
                android:text="@string/show_all"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_24"
                app:layout_constraintBottom_toTopOf="@+id/buttonFavourite"
                app:layout_constraintEnd_toEndOf="@+id/buttonFindByName"
                app:layout_constraintStart_toStartOf="@+id/buttonFindByName" />

            <Button
                android:id="@+id/buttonFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/oval_button"
                android:elevation="3dp"
                android:fontFamily="@font/roboto"
                android:text="@string/favourite"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonShowAll"
                app:layout_constraintStart_toStartOf="@+id/buttonShowAll" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>
