<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cocktailDetail"
            type="com.bulyginkonstantin.cocktailbase.model.Cocktail" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        tools:context=".view.DetailInfoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cocktailImageView"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:adjustViewBounds="true"
                android:imgUrl="@{cocktailDetail.imgUrl}"
                android:contentDescription="@string/cocktail_photo"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/three_bottles_photo" />

            <TextView
                android:id="@+id/cocktailNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black_for_text"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                android:text="@{cocktailDetail.drinkName}"
                app:layout_constraintEnd_toEndOf="@+id/cocktailImageView"
                app:layout_constraintStart_toStartOf="@+id/cocktailImageView"
                app:layout_constraintTop_toBottomOf="@+id/cocktailImageView"
                tools:text="Cocktail Name" />

            <TextView
                android:id="@+id/glassTextViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/glass"
                android:textColor="@color/black_for_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/styleTextViewLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cocktailNameTextView" />

            <TextView
                android:id="@+id/glassTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black_for_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/glassTextViewLabel"
                app:layout_constraintStart_toEndOf="@+id/glassTextViewLabel"
                android:text="@{cocktailDetail.glass}"
                tools:text="place holder" />

            <TextView
                android:id="@+id/alcoholicTextViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/alcoholic"
                android:textColor="@color/black_for_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/glassTextViewLabel"
                app:layout_constraintTop_toBottomOf="@+id/glassTextViewLabel" />

            <TextView
                android:id="@+id/alcoholicTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black_for_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/alcoholicTextViewLabel"
                app:layout_constraintStart_toEndOf="@+id/alcoholicTextViewLabel"
                android:text="@{cocktailDetail.isAlcoholic}"
                tools:text="place holder" />

            <TextView
                android:id="@+id/styleTextViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/style"
                android:textColor="@color/black_for_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/cocktailNameTextView"
                app:layout_constraintStart_toEndOf="@+id/glassTextView"
                app:layout_constraintTop_toBottomOf="@+id/cocktailNameTextView" />

            <TextView
                android:id="@+id/styleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black_for_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/styleTextViewLabel"
                app:layout_constraintStart_toEndOf="@+id/styleTextViewLabel"
                android:text="@{cocktailDetail.category}"
                tools:text="place holder" />

            <TextView
                android:id="@+id/ingredientsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ingredients"
                android:textColor="@color/black_for_text"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/cocktailNameTextView"
                app:layout_constraintStart_toStartOf="@+id/cocktailNameTextView"
                app:layout_constraintTop_toBottomOf="@+id/alcoholicTextViewLabel" />

            <TextView
                android:id="@+id/allIngredientsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black_for_text"
                app:layout_constraintEnd_toStartOf="@+id/ingredientsTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsTextView"
                tools:text="place holder" />

            <TextView
                android:id="@+id/instructionsTextViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/instructions"
                android:textColor="@color/black_for_text"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/ingredientsTextView"
                app:layout_constraintStart_toStartOf="@+id/ingredientsTextView"
                app:layout_constraintTop_toBottomOf="@+id/allIngredientsTextView" />

            <TextView
                android:id="@+id/instructionsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black_for_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructionsTextViewLabel"
                android:text="@{cocktailDetail.instructions}"
                tools:text="place holder" />

            <Button
                android:id="@+id/buttonChangeFavourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/oval_button"
                android:text="@string/add_to_favourites"
                android:textColor="@color/text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructionsTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>
